services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"activation","tier":"backend"},"name":"activation","namespace":"soxfive-beta"},"spec":{"ports":[{"name":"activation","port":80,"targetPort":80}],"selector":{"app":"activation"},"type":"ClusterIP"}}
    creationTimestamp: "2022-09-25T21:16:17Z"
    labels:
      app: activation
      tier: backend
    name: activation
    namespace: soxfive-beta
    resourceVersion: "9367"
    uid: 00d831a7-be98-4fe6-a563-979efb3ade18
  spec:
    clusterIP: 10.98.101.243
    clusterIPs:
    - 10.98.101.243
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: activation
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: activation
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"api","tier":"backend"},"name":"api","namespace":"soxfive-beta"},"spec":{"ports":[{"name":"api","port":80,"targetPort":80}],"selector":{"app":"api"},"type":"ClusterIP"}}
    creationTimestamp: "2022-09-25T21:16:18Z"
    labels:
      app: api
      tier: backend
    name: api
    namespace: soxfive-beta
    resourceVersion: "9420"
    uid: 4a2abfa5-6518-4024-9790-e24c5e245db6
  spec:
    clusterIP: 10.105.187.150
    clusterIPs:
    - 10.105.187.150
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: api
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: api
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"auth","tier":"backend"},"name":"auth","namespace":"soxfive-beta"},"spec":{"ports":[{"name":"auth","port":80,"targetPort":80}],"selector":{"app":"auth"},"type":"ClusterIP"}}
    creationTimestamp: "2022-09-25T21:16:19Z"
    labels:
      app: auth
      tier: backend
    name: auth
    namespace: soxfive-beta
    resourceVersion: "9464"
    uid: b3ea398f-b2a1-453c-adc9-f539951fbb04
  spec:
    clusterIP: 10.101.63.49
    clusterIPs:
    - 10.101.63.49
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: auth
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: auth
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"pgbouncer","tier":"backend"},"name":"db","namespace":"soxfive-beta"},"spec":{"ports":[{"name":"pgbouncer","port":5432,"targetPort":5432}],"selector":{"app":"pgbouncer"},"type":"ClusterIP"}}
    creationTimestamp: "2022-09-25T21:16:21Z"
    labels:
      app: pgbouncer
      tier: backend
    name: db
    namespace: soxfive-beta
    resourceVersion: "9612"
    uid: 7fb41e44-b4a1-4b4a-93b0-6f6222214eaa
  spec:
    clusterIP: 10.108.215.225
    clusterIPs:
    - 10.108.215.225
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: pgbouncer
      port: 5432
      protocol: TCP
      targetPort: 5432
    selector:
      app: pgbouncer
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"firebase","tier":"backend"},"name":"firebase","namespace":"soxfive-beta"},"spec":{"ports":[{"name":"firebase","port":80,"targetPort":80}],"selector":{"app":"firebase"},"type":"ClusterIP"}}
    creationTimestamp: "2022-09-25T21:16:20Z"
    labels:
      app: firebase
      tier: backend
    name: firebase
    namespace: soxfive-beta
    resourceVersion: "9510"
    uid: 64b83798-0da8-4b68-94f8-370f1ade6ed1
  spec:
    clusterIP: 10.98.75.141
    clusterIPs:
    - 10.98.75.141
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: firebase
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: firebase
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"playground-soxfive-panel","tier":"front"},"name":"playground-soxfive-panel","namespace":"soxfive-beta"},"spec":{"ports":[{"name":"front","port":80,"protocol":"TCP","targetPort":80}],"selector":{"app":"playground-soxfive-panel"},"type":"ClusterIP"}}
    creationTimestamp: "2022-09-26T07:12:44Z"
    labels:
      app: playground-soxfive-panel
      tier: front
    name: playground-soxfive-panel
    namespace: soxfive-beta
    resourceVersion: "86563"
    uid: 8c0785df-aaea-4675-8241-ae2c04aeeb82
  spec:
    clusterIP: 10.111.2.248
    clusterIPs:
    - 10.111.2.248
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: front
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: playground-soxfive-panel
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"postgres","tier":"backend"},"name":"postgres","namespace":"soxfive-beta"},"spec":{"ports":[{"name":"postgres","port":5432,"targetPort":5432}],"selector":{"app":"postgres"},"type":"ClusterIP"}}
    creationTimestamp: "2022-09-25T21:16:20Z"
    labels:
      app: postgres
      tier: backend
    name: postgres
    namespace: soxfive-beta
    resourceVersion: "9566"
    uid: 452cb118-603c-4c98-8152-a55aabd85d75
  spec:
    clusterIP: 10.103.141.166
    clusterIPs:
    - 10.103.141.166
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
    selector:
      app: postgres
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"proxy","tier":"backend"},"name":"proxy","namespace":"soxfive-beta"},"spec":{"ports":[{"name":"proxy","port":80,"targetPort":80}],"selector":{"app":"proxy"},"type":"ClusterIP"}}
    creationTimestamp: "2022-09-25T21:16:22Z"
    labels:
      app: proxy
      tier: backend
    name: proxy
    namespace: soxfive-beta
    resourceVersion: "9645"
    uid: ef2127ac-e1f1-4ddb-b150-fa6dc8061869
  spec:
    clusterIP: 10.103.61.188
    clusterIPs:
    - 10.103.61.188
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: proxy
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: proxy
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"pushup","tier":"backend"},"name":"pushup","namespace":"soxfive-beta"},"spec":{"ports":[{"name":"pushup","port":80,"targetPort":80}],"selector":{"app":"pushup"},"type":"ClusterIP"}}
    creationTimestamp: "2022-09-25T21:16:22Z"
    labels:
      app: pushup
      tier: backend
    name: pushup
    namespace: soxfive-beta
    resourceVersion: "9698"
    uid: 6ed843aa-b037-4925-9954-c6a2c1fa4698
  spec:
    clusterIP: 10.97.253.173
    clusterIPs:
    - 10.97.253.173
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: pushup
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: pushup
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"redis","tier":"backend"},"name":"redis","namespace":"soxfive-beta"},"spec":{"ports":[{"name":"redis","port":6379,"targetPort":6379}],"selector":{"app":"redis"}}}
    creationTimestamp: "2022-09-25T21:16:23Z"
    labels:
      app: redis
      tier: backend
    name: redis
    namespace: soxfive-beta
    resourceVersion: "9829"
    uid: 95b1e6ef-e810-4a32-bb82-27f38f4e5804
  spec:
    clusterIP: 10.104.219.176
    clusterIPs:
    - 10.104.219.176
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: 6379
    selector:
      app: redis
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"repeater","tier":"backend"},"name":"repeater","namespace":"soxfive-beta"},"spec":{"ports":[{"name":"repeater","port":80,"targetPort":80}],"selector":{"app":"repeater"},"type":"ClusterIP"}}
    creationTimestamp: "2022-09-25T21:16:24Z"
    labels:
      app: repeater
      tier: backend
    name: repeater
    namespace: soxfive-beta
    resourceVersion: "9861"
    uid: 1618ce2d-fde9-4f63-b924-494f53818735
  spec:
    clusterIP: 10.101.145.249
    clusterIPs:
    - 10.101.145.249
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: repeater
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: repeater
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"schedule","tier":"backend"},"name":"schedule","namespace":"soxfive-beta"},"spec":{"ports":[{"name":"schedule","port":80,"targetPort":80}],"selector":{"app":"schedule"},"type":"ClusterIP"}}
    creationTimestamp: "2022-09-25T21:16:25Z"
    labels:
      app: schedule
      tier: backend
    name: schedule
    namespace: soxfive-beta
    resourceVersion: "9922"
    uid: 72162e1c-d7b5-4071-b14d-231c4bbe5a4f
  spec:
    clusterIP: 10.101.132.70
    clusterIPs:
    - 10.101.132.70
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: schedule
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: schedule
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"stats","tier":"backend"},"name":"stats","namespace":"soxfive-beta"},"spec":{"ports":[{"name":"stats","port":80,"targetPort":80}],"selector":{"app":"stats"},"type":"ClusterIP"}}
    creationTimestamp: "2022-09-25T21:16:26Z"
    labels:
      app: stats
      tier: backend
    name: stats
    namespace: soxfive-beta
    resourceVersion: "9966"
    uid: 88aac983-880a-49c4-b9f8-8764f5fe7e26
  spec:
    clusterIP: 10.111.187.128
    clusterIPs:
    - 10.111.187.128
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: stats
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: stats
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"user","tier":"backend"},"name":"user","namespace":"soxfive-beta"},"spec":{"ports":[{"name":"user","port":80,"targetPort":80}],"selector":{"app":"user"},"type":"ClusterIP"}}
    creationTimestamp: "2022-09-25T21:16:27Z"
    labels:
      app: user
      tier: backend
    name: user
    namespace: soxfive-beta
    resourceVersion: "10018"
    uid: 695fb68c-d3cb-49a5-884f-e12bc8f348c3
  spec:
    clusterIP: 10.101.177.199
    clusterIPs:
    - 10.101.177.199
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: user
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: user
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
