stateful.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"StatefulSet","metadata":{"annotations":{},"labels":{"app":"postgres","tier":"backend"},"name":"postgres","namespace":"soxfive-beta"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"postgres"}},"serviceName":"postgres-service","template":{"metadata":{"labels":{"app":"postgres"}},"spec":{"containers":[{"env":[{"name":"POSTGRES_PASSWORD","value":"8CLNNqLLtFf9UPgJ"},{"name":"PGDATA","value":"/var/lib/postgresql/data/pgdata"}],"image":"postgres:12","name [...]
    creationTimestamp: "2022-09-25T21:16:20Z"
    generation: 8
    labels:
      app: postgres
      tier: backend
    name: postgres
    namespace: soxfive-beta
    resourceVersion: "5735848"
    uid: b5643828-872c-4db6-92c5-bcb81483af96
  spec:
    podManagementPolicy: OrderedReady
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: postgres
    serviceName: postgres-service
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: postgres
      spec:
        containers:
        - env:
          - name: POSTGRES_PASSWORD
            value: 8CLNNqLLtFf9UPgJ
          - name: PGDATA
            value: /var/lib/postgresql/data/pgdata
          image: postgres:12
          imagePullPolicy: IfNotPresent
          name: postgres
          resources:
            limits:
              cpu: "2"
              memory: 4Gi
            requests:
              cpu: 300m
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: postgres-claim
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    updateStrategy:
      rollingUpdate:
        partition: 0
      type: RollingUpdate
    volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        creationTimestamp: null
        name: postgres-claim
      spec:
        accessModes:
        - ReadWriteOnce
        resources:
          requests:
            storage: 30Gi
        volumeMode: Filesystem
      status:
        phase: Pending
  status:
    availableReplicas: 1
    collisionCount: 0
    currentReplicas: 1
    currentRevision: postgres-9cbb759bd
    observedGeneration: 8
    readyReplicas: 1
    replicas: 1
    updateRevision: postgres-9cbb759bd
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
